--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     
  </head>
 
- <div id="contentToWrite" class="comments" style="color:pink;">爱你宝贝❤️</div> 
+ <div id="contentToWrite" class="comments" style="color:pink;">晓红宝贝一直爱你❤️</div> 
                             
 
     <canvas id="pinkboard" width="1490" height="754"></canvas>
@@ -208,7 +208,7 @@
         // ctx.font="20px";
         ctx.fillStyle = colors[i % 18];
         ctx.fillText(
-          "love you宝贝蛋蛋",
+          "love you晓红宝贝😘",
           this.x - this.width * 0.5,
           this.y - this.height * 0.5,
           this.width,
